# omics_toolbox

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
dimension_changer/: decoder.ckpt  dim_reducer.ckpt  phate_scaler.pkl  phate_vis_scaler.pkl
dimension_changer/cyclicEMT/: phate_scaler.pkl
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-jcr-data-exploration.ipynb  1.01-jcr-data-preprocessing.ipynb
notebooks/MIOFlow/: 0-data-downloading.ipynb  1-data-preprocessing.ipynb  1-phate_meld.ipynb  2-dim-reduction-latent-spaces.ipynb  3-time-pseudotime-meld.ipynb  3-time-pseudotime.ipynb  3-train-dimchanger.ipynb  4-dimension-changer.ipynb  5-mioflow-prep.ipynb  6-dimchanger-decode-back.ipynb  6-visualization-mioflow.ipynb  7-dimchanger-decode-back.ipynb  7-heatmap-EMT.ipynb  9-data-visualization.ipynb  old-2-data-dimchanger.ipynb  old-4-mioflow-prep.ipynb
notebooks/MIOFlow/checkpoints/: epoch=12-step=5096-v1.ckpt  epoch=12-step=5096.ckpt  epoch=13-step=5488-v1.ckpt  epoch=13-step=5488-v2.ckpt  (+4 more)
notebooks/MIOFlow_Grwoth_Rate/: test_growth_rate_train.ipynb
notebooks/MIOFlow_growth_rate/: 0.01-Growth-Rate-Test.ipynb  0.02-Predict-Growth-Rate.ipynb
notebooks/cyclicEMT/: 0-data-preparation.ipynb  2-dim-reduction-latent-spaces.ipynb  3-time-pseudotime.ipynb  4-dimension-changer.ipynb  7-dimchanger-decode-back.ipynb
notebooks/germ_cells/: 1-data-preprocessing.ipynb
omics_toolbox/: __init__.py  dataset.py  decoder.py  dimchanger.py  features.py  plots.py
omics_toolbox/modeling/: predict.py  train.py
results/adata/: mioflow_data_10d.csv
(+26 files in other folders)
