[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "omics_toolbox"
version = "0.0.1"
description = "This project is a streamlined pipeline to use the multiomics tools developed by the Krishnaswamy Lab."
authors = [
  { name = "Krishnaswamy Lab" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["omics_toolbox"]
include = ["pyproject.toml", "omics_toolbox/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["omics_toolbox"]
force-sort-within-sections = true

